--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: python
-python:
-	- "3.5"
+python: "3.5"
 env:
-	- DJANGO_VERSION=1.8.5
-# command to install dependencies
+	- DJANGO=1.8.5
 install:
-	- pip install -q Django==$DJANGO_VERSION
-	- pip install -r requirements.txt
-# command to run tests
+	- pip install -q Django==$DJANGO --use-mirrors
+	- pip install -q -e . --use-mirrors
 script: «python manage.py test»
