--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ env:
  - DJANGO=1.8.5
 install:
  - pip install -q Django==$DJANGO
- - pip install -q -e .
+ - pip install -q .
 script: «python manage.py test»
