--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
  - pip install Django==$DJANGO
  - pip install .
 script: 
- - python manage.py flush --yes
+ - python manage.py flush
  - python manage.py makemigrations
  - python manage.py migrate
  - python manage.py collectstatic
